# gen_drift

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
metrics/: discriminative_metrics.py
notebooks/: 02_TimeGAN_TF2.ipynb  Untitled.ipynb  create_datasets.ipynb
src/: data_loading.py  main_timegan.py  timegan.py
